# remu

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  binning.py  build_packages.sh  documentation-requirements.txt  example-requirements.txt  likelihood.py  matplotlibrc  migration.py  multiprocess-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  requirements26.txt  run_examples.sh  run_tests.sh  setup.py  setup.sh  test-requirements.txt  tests.py  upload_release.sh
.github/workflows/: opencode.yml  pythontests.yml
docs/: Makefile  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/examples/: README.rst
docs/examples/00/: README.rst  do_everything.sh  modelA_data.txt  modelA_truth.txt  modelB_data.txt  modelB_truth.txt  plot_data.py  real_data.txt  reco-binning.yml  truth-binning.yml
docs/examples/01/: README.rst  build_response_matrix.py  coarse-truth-binning.yml  do_everything.sh  fine-truth-binning.yml  generator_truth.npy  optimised-truth-binning.yml  reco-binning.yml  response_matrix.npy  response_matrix.npz
docs/examples/02/: README.rst  do_everything.sh  fit_models.py  fit_p-values.txt  mix_model_fit.txt  mix_model_p_value.txt  modelA_fit.txt  modelB_fit.txt  simple_hypotheses.txt
docs/examples/03/: README.rst  build_response_matrix.py  do_everything.sh  fit_models.py  fit_p-values.txt  fit_p-values_syst.txt  generator_truth.npy  modelA_fit.txt  modelA_fit_syst.txt  modelB_fit.txt  modelB_fit_syst.txt  plot_data.py  response_matrix.npy  response_matrix.npz
docs/examples/04/: B_posterior.txt  B_prior.txt  README.rst  burn_combined_tau.txt  burn_long_tau.txt  burn_short_tau.txt  combined_chain_shape.txt  combined_tau.txt  do_everything.sh  do_mcmc.py  percentiles.txt  plr.txt  stats.txt  tauA.txt
docs/examples/05/: README.rst  bg_truth.txt  build_response_matrix.py  df.txt  do_everything.sh  do_uproot.py  fit_models.py  flat_df.txt  modelA_bg_fit.txt  modelA_bg_gof.txt  modelA_only_fit.txt  modelB_bg_fit.txt  modelB_only_fit.txt  modelB_only_gof.txt  muon-binning.yml  noise_truth.txt  nominal_bg_data.txt  real_data.txt  response_matrix.npz  structured_df.txt  structured_keys.txt  truth-binning.yml
docs/examples/06/: README.rst  check_binning.txt  do_everything.sh  fit.txt  flux-binning.yml  (+4 more)
docs/introduction/: README.rst
docs/modules/: README.rst  binning.rst  likelihood.rst  likelihood_utils.rst  matrix_utils.rst  migration.rst
examples/: README.rst  example_analysis.py  neutrino_example.py
examples/00/: README.rst  background_data.txt  background_truth.txt  do_everything.sh  modelA_data.txt  modelA_truth.txt  modelB_data.txt  modelB_truth.txt  plot_data.py  real_data.txt  reco-binning.yml  truth-binning.yml
examples/01/: README.rst  build_response_matrix.py  fine-truth-binning.yml  reco-binning.yml  truth-binning.yml
examples/neutrino_data/: reco-binning.yml  truth-binning.yml
examples/simple_experiment/: experiment.py  run_experiment.py  simulate_experiment.py
examples/toy_model/: tests.py  toy_detector.py  toy_model.py
examples/toydata/: model1.csv  model2.csv  reco1_detector1.csv  reco1_detector2.csv  reco2_detector1.csv  reco2_detector2.csv  toy-reco-binning.yml  toy-truth-binning.yml  truth1.csv  truth2.csv
logo/: LICENSE
remu/: __init__.py  binning.py  likelihood.py  likelihood_utils.py  matrix_utils.py  migration.py  plotting.py
src/remu/: __init__.py  binning.py  likelihood.py  likelihood_utils.py  matrix_utils.py  migration.py  plotting.py  yaml.py  yaml_compat.py
testdata/: csv-test.csv  test-data.csv  test-reco-binning.yml  test-truth-binning.yml  weighted-csv-test.csv
(+190 files in other folders)
