[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "remu"
authors = [{name = "Lukas Koch", email = "lukas.koch@mailbox.org"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.6,<4"
dependencies = [
    "numpy >= 1.19.0",
    "scipy >= 1.5.0",
    "pyyaml >= 5.4",
    "matplotlib >= 3.3.0",
]

[project.optional-dependencies]
mcmc = [
    "emcee >= 3.1.0",
]

[project.urls]
Home = "https://remu.readthedocs.io/en/latest/"
